SONARCLOUD CODE SMELLS + FIX BUG IMG URL EMPTY